--- a/former/index.html
+++ b/former/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Jeremy Cohen
+title: Niklas Kugler
 permalink: /
 ---
 
@@ -10,8 +10,8 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">JEREMY COHEN </h1>
-          <p class="animated fadeInUp">Welcome to my personal page ! I am an Artificial Intelligence and Self-Driving Cars Engineer. </p>
+          <h1 class="animated fadeInUp">Niklas Kugler </h1>
+          <p class="animated fadeInUp">Welcome to my personal page ! I am an Automotive IT-Engineer. </p>
         </div>
       </div>
     </div>
