--- a/former/contact.html
+++ b/former/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Contact us!
+title: Contact me!
 permalink: /contact/
 ---
 
@@ -17,6 +17,7 @@ permalink: /contact/
     </div>
   </div>
 </section>
+
 <!-- contact form start -->
 <section id="contact-form">
   <div class="container">
